--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Alphabot",
+  "name": "CptKareno bot",
   "version": "16.0.0",
-  "description": "WhatsApp bot",
+  "description": "Nazi bot",
   "zeeone": "zeeone.js",
   "directories": {
     "lib": "lib"
