--- a/settings.json
+++ b/settings.json
@@ -17,5 +17,5 @@
 	"fakethumb":"thumbnail_1.jpg", 
 	"donasi":"donasi.jpg",
 	"captionpay":"Scan untuk melakukan pembayaran",
-	"fake": " 「  ALPHABOT  」\nCreated By ᴹᴿ᭄ CptKareno ×፝֟͜×"
+	"fake": " 「  CptKareno bot  」\nCreated By ᴹᴿ᭄ CptKareno ×፝֟͜×"
 }
